# gary

./: .env.example  .gitattributes  .gitignore  .mcp.json  .npmrc  AGENTS.md  CLAUDE.md  LICENSE  NOTICE  README.de.md  README.es.md  README.md  README.pt.md  README.zh.md  cv-data.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json  vite.config.ts
config/: apply-fieldmap.json  easyapply-filter.json.example  profile.yml
data/: applications.md  easyapply-questions.md  filters.md  linkedin-playbook.md  metrics.md.example  offers-master.md.example  orchestrator-state.md.example
docs/: README.md  SESSION-CONTEXT.md  business-rules.md  career-ops-map.md  components.md  design-system.md  operating-rules.md
engines/: _probe5.mjs  analyze-patterns.mjs  apply-assist.mjs  apply-fields.mjs  apply-from-linkedin.mjs  build-cv-latex.mjs  check-login.mjs  cv-builder.mjs  cv-sync-check.mjs  dedup-tracker.mjs  easyapply-batch.mjs  find3.mjs  generate-pdf.mjs  getonbrd-matches.mjs  gmail-harvest.mjs  himalayas-matches.mjs  inspect-session-site.mjs  jd.mjs  learn-forms.mjs  linkedin-enrich.mjs  linkedin-scan.mjs  merge-tracker.mjs  normalize-statuses.mjs  notebooklm-session.mjs  open-tab.mjs  probe-getonbrd.mjs  pull-free.mjs  read-fields.mjs  reserve-report-num.mjs  scan-boards.mjs  scrape-matches.mjs  start-chrome-debug.cmd  verify-pipeline.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: data.rs  engines.rs  ingest.rs  main.rs  proc.rs  settings.rs  workspace.rs
(+89 files in other folders)
