[package]
name = "gary"
version = "0.1.0"
description = "GARY — desktop copilot for job hunting"
authors = ["Julián Nicholls"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# PTY bridge: spawn the interactive AI CLI in a pseudo-terminal and stream both ways
portable-pty = "0.8"
# API keys stored in the OS keychain (never on disk) — spec 02
keyring = "2"

[features]
custom-protocol = ["tauri/custom-protocol"]
